# openai_plooxies

./: .dockerignore  .env  .gitignore  LICENSE  Makefile  README.md  compose.dev.yaml  compose.yaml  pyproject.toml
MobileApp/: README.md  app.json  package-lock.json  package.json
MobileApp/android/: gradle.properties  settings.gradle
MobileApp/android/app/: build.gradle
MobileApp/app/: _layout.tsx  call.tsx  chat.tsx  hotel.tsx
MobileApp/app/(tabs)/: _layout.tsx  call.tsx  calls.tsx  hotels.tsx  index.tsx
MobileApp/components/: CallParticipantTile.tsx  LayoutList.tsx
MobileApp/data/: database.ts  database.types.ts  models.ts
MobileApp/ios/: Podfile  Podfile.properties.json
MobileApp/ios/MobileApp/: Info.plist
MobileApp/ios/MobileApp.xcodeproj/: project.pbxproj
api/: Dockerfile  alembic.ini  config.py  models.py  package.json  pyproject.toml  run-daily-agent.sh  run-daily-api.sh
api/alembic/: env.py
api/src/plooxagent/api/: agentic_components.py  agents_service.py  config.py  custom_tools.py  daily_agent.py  models.py  server.py  test_agents.py  utils.py
api/src/plooxagent/api/alembic/: env.py
api/src/plooxagent/api/daily/: __init__.py  agent.py  service.py
client/: .env.example  .prettierrc.json  Dockerfile  app.config.ts  components.json  eslint.config.js  package.json
client/app/: routeTree.gen.ts  router.tsx  ssr.tsx
data/: vs_record.json
src/: __init__.py  agentic_components.py  base_agent.py  custom_tools.py  test_agents.py  utils.py
src/base_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/database/: calendar.py
(+45 files in other folders)
