[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "psycopg[binary]>=3.2.6",
    "pydantic-settings>=2.9.1",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.2",
]
