[project]
name = "plooxagent-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "pipecat-ai[daily,openai,silero]>=0.0.65",
    "psycopg[binary]>=3.2.6",
    "pydantic>1.10.9",
    "pydantic-settings>=2.9.1",
    "sounddevice>=0.5.1",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.2",
]
